<resources>
    <string name="app_name">Grocery Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="new_product">New Product</string>
    <string name="my_orders">My Orders</string>
    <string name="my_carts">My Carts</string>
    <string name="logout">Logout</string>
    <string name="product">Products</string>
    <string name="new_address">New Address</string>
    <string name="havnt_account">Don\'t have an account ?</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="password">Password</string>
    <string name="name">name</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="have_account">Already have an account ?</string>
    <string name="users">Users</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="menu_account">Account</string>
    <string name="shopping">See your cart to complete the selling</string>
    <string name="forget_password">Forget Password</string>
</resources>