<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity"
    android:background="@color/white">
    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@mipmap/regbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:textColor="#888887"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/email_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/account"
        android:layout_marginTop="15dp"
        android:drawablePadding="10dp"
        android:textColor="#888887"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_reg"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/keylog"
        android:drawablePadding="10dp"
        android:layout_marginTop="15dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_reg"
        app:layout_constraintWidth_percent=".8" />
    <EditText
        android:id="@+id/confirm_password_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/keylog"
        android:drawablePadding="10dp"
        android:layout_marginTop="15dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_reg"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/number_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
        android:layout_marginTop="15dp"
        android:drawablePadding="10dp"
        android:textColor="#888887"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_reg"
        app:layout_constraintWidth_percent=".8" />
    <EditText
        android:id="@+id/address_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:layout_marginTop="15dp"
        android:drawablePadding="10dp"
        android:textColor="#888887"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/address"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_reg"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_btn"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:padding="14dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_reg"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        app:layout_constraintVertical_bias="0.201" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.1"
        android:scaleX=".5"
        android:scaleY=".5"
        />
</androidx.constraintlayout.widget.ConstraintLayout>